2012-04-14  Andreas K. Foerster  <info@akfoerster.de>

	* bdf2c: make function name configurable

	* akfavatar.h (avt_get_font_char): replaces get_font_char
	avatar.c, lua/akfavatar-graphic.c: adapted

2012-04-13  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_analyze_event): code cleanup

	* avatar.c (avt_key): parameter may be NULL

2012-04-12  Andreas K. Foerster  <info@akfoerster.de>

	* example.c: include XPM file

2012-04-11  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c (help, check_options, initialize):
	support options for fullscreen mode (-f, -F)

	* avatar.c (avt_navigate): fix size with window offset

	* lua/lua-avt.c: avt.title()

2012-04-10  Andreas K. Foerster  <info@akfoerster.de>

	* lua-avt.c (lavt_avatar_image_default, lavt_avatar_image_none):
	functions removed again

	* lua-avt.c (lavt_avatar_image): renamed from lavt_avatar_image_data

	* lua-avt.c (lavt_show_image): renamed from lavt_show_image_string
	also supports XPM data in a table now

	* lua-avt.c: avt.load_audio_string and avt.load_base_audio_string were
	renamed to avt.load_audio and avt.load_base_audio

	* avatar.c (avt_wait_button, avt_decide): store/restore background

	* avatar.c (avt_save_background): new function

2012-04-09  Andreas K. Foerster  <info@akfoerster.de>

	* lua-avt.c (import_xpm): new function
	set_avatar and all callers adapted

	* lua-avt.c (lavt_avatar_image_default, lavt_avatar_image_none)
	(lavt_avatar_image_data, lavt_avatar_image_file): new functions

	* lua-avt.c (lavt_set_title): store values in registry

	* lua-avt.c (lavt_start): new function

	* lua-avt.c: deprecated funtions removed

	* avatar.c (avt_set_title): fix: check if encoding was set

2012-04-07  Andreas K. Foerster  <info@akfoerster.de>

	* configure, mingw/Makefile.in: improve cross-compiling

	* avatar.c (avt_show_image_file, avt_show_image_stream)
	(avt_show_image_data, avt_import_image_data, avt_import_image_file)