@@ -1,3 +1,7 @@
+2012-04-23  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avatar.c: add code for resizing again
+
 2012-04-14  Andreas K. Foerster  <info@akfoerster.de>
 
 	* bdf2c: make function name configurable
